# tensorflow

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_en.md  OAT.xml  OWNERS  README.md  README_en.md  SECURITY.md  SECURITY_en.md  Third_Party_Open_Source_Software_List.yaml  Third_Party_Open_Source_Software_Notice  classify_rule.txt  classify_rule.yaml  configure  configure.py  version.cmake
tf_adapter/tests/: CMakeLists.txt
tf_adapter/tests/depends/alog/: CMakeLists.txt
tf_adapter/tests/depends/alog/src/: alog_stub.cc  alog_stub.h
tf_adapter/tests/depends/aoe/: CMakeLists.txt
tf_adapter/tests/depends/aoe/src/: aoe_stub.cc
tf_adapter/tests/depends/ascendcl/: CMakeLists.txt
tf_adapter/tests/depends/ascendcl/src/: ascendcl_stub.cc  ascendcl_stub.h
tf_adapter/tests/depends/datatransfer/: CMakeLists.txt
tf_adapter/tests/depends/datatransfer/src/: datatransfer_stub.cc
tf_adapter/tests/depends/ge_runner/: CMakeLists.txt
tf_adapter/tests/depends/ge_runner/src/: ascend_string.cc  callback_executor.cc  callback_executor.h  ge_runner_stub.cc  ge_stub.h  ge_tensor_stub.cc  ge_util.h
tf_adapter/tests/depends/indextransform/: CMakeLists.txt
tf_adapter/tests/depends/indextransform/src/: indextransform_stub.cc
tf_adapter/tests/depends/mmpa/: CMakeLists.txt
tf_adapter/tests/depends/mmpa/src/: mmpa_stub.cc
tf_adapter/tests/depends/runtime/: CMakeLists.txt
tf_adapter/tests/depends/runtime/src/: runtime_stub.cc  runtime_stub.h
tf_adapter/tests/depends/test_util/: tensor_testutil.h
tf_adapter/tests/patch/securec/: 0001-add-securec-cmake-script.patch
tf_adapter/tests/st/: CMakeLists.txt
tf_adapter/tests/st/kernels/pbtxt/: geop_npu_onnx_graph_op.pbtxt
tf_adapter/tests/st/kernels/testcase/: basic_lstm_cell_Input_grad_ops.cc  basic_lstm_cell_cstate_grad_ops.cc  basic_lstm_cell_weight_grad_ops.cc  decode_image_v3_test.cc  dynamic_augru_grad_test.cc  dynamic_augru_test.cc  dynamic_gruv2_grad_test.cc  dynamic_rnn_grad_test.cc  dynamic_rnn_test.cc  dynamic_rnn_v2_test.cc  fast_gelu_v2_ops_test.cc  file_constant_test.cc  geop_npu_test.cc  get_next_test.cc  get_shape_ops_test.cc  hccl_op_test.cc  k_means_centroids_test.cc  layer_norm_grad_ops_test.cc  layer_norm_ops_test.cc  lru_cache_v2_ops_test.cc  mbuf_allocator_test.cc  n_p_u_get_float_statusV2_test.cc  non_zero_ops_test.cc  non_zero_with_value_shape_ops_test.cc  npu_cpu_ops_test.cc  npu_embedding_ops_test.cc  npu_onnx_graph_op_test.cc  npu_ops_test.cc  ocr_ops_test.cc  om_ops_kernel_test.cc  prod_env_mat_a_ops_test.cc  prod_force_se_a_ops_test.cc  scatter_elements_ops_test.cc  tabulate_fusion_grad_ops_test.cc
tf_adapter/tests/st/optimizers/pbtxt/: add_input_pass_no_need_optimize_test.pbtxt  add_input_pass_worker_test.pbtxt  get_attr_no_need_opt.pbtxt  get_attr_npu_optimize.pbtxt  om_test_build_geop.pbtxt  om_test_in_out_pair.pbtxt  om_test_in_out_pair_flag_false.pbtxt  varhandleop_test.pbtxt  weight_update_shard_test_func.pbtxt
tf_adapter/tests/st/optimizers/testcase/: add_input_pass_test.cc  dp_tf_ge_conversion_pass_test.cc  frozen_variable_pass_test.cc  get_attr_optimize_pass_test.cc  gradient_fusion_optimizer_test.cc  om_partition_subgraphs_pass_test.cc  set_var_format_pass_test.cc  weight_update_sharding_pass_test.cc
tf_adapter/tests/st/util/testcase/: ge_plugin_test.cc  npu_attrs_test.cc  util_test.cc
tf_adapter/tests/ut/: CMakeLists.txt  main.cc
tf_adapter/tests/ut/kernels/pbtxt/: geop.pbtxt  geop_compile_dynamic.pbtxt  geop_npu_compile.pbtxt  geop_npu_onnx_graph_op_parse.pbtxt  geop_shape_generalization_mode.pbtxt  geop_shape_generalization_mode_ignore.pbtxt  geop_string_op.pbtxt  init_shutdown.pbtxt
tf_adapter/tests/ut/kernels/testcase/: basic_lstm_cell_Input_grad_ops.cc  dropout_ops_test.cc  dynamic_augru__test.cc  dynamic_augru_grad_test.cc  dynamic_gru_v2_test.cc  dynamic_gruv2_grad_test.cc  dynamic_rnn_test.cc  dynamic_rnn_v2_test.cc  fast_gelu_v2_ops_test.cc  file_constant_test.cc  geop_npu_test.cc  get_next_test.cc  get_shape_ops_test.cc  hccl_op_test.cc  infeed_outfeed_test.cc  k_means_centroids_test.cc  k_means_centroids_v2_test.cc  layer_norm_grad_ops_test.cc  (+24 more)
tf_adapter/tests/util/: sanitizer_options.h
tf_adapter_2.x/compat_v1/: CMakeLists.txt  upgrade_tf1_compat_tf2.py
tf_adapter_2.x/compat_v1/replacement/helper/: helper.py
tf_adapter_2.x/npu_device/: CMakeLists.txt
tf_adapter_2.x/npu_device/core/: npu_aoe.cpp  npu_aoe.h  npu_device.cpp  npu_device.h  npu_device_register.cpp  npu_device_register.h  npu_dp.h  npu_env.h  npu_global.cpp  npu_global.h  npu_hdc.cpp  npu_hdc.h  npu_logger.cpp  npu_logger.h  npu_managed_buffer.cpp  npu_managed_buffer.h  npu_micros.h  npu_op_executor.cpp  npu_op_executor.h  npu_parser.cpp  npu_parser.h  npu_python.h  npu_run_context.cpp  npu_run_context.h  npu_tensor.cpp  npu_tensor.h  npu_thread_pool.h  npu_types.h  npu_unwrap.cpp  npu_unwrap.h  npu_utils.cpp  npu_utils.h  npu_wrapper.cpp
tf_adapter_2.x/npu_device/core/op_executors/: npu_concrete_graph.cpp  npu_concrete_graph.h  npu_custom_kernel_op.cpp  npu_custom_kernel_op.h  npu_dynamic_shape_op.cpp  npu_dynamic_shape_op.h  npu_kernel_registry.h  npu_mirrored_op.cpp  npu_mirrored_op.h  npu_resource_generator_op.cpp  npu_resource_generator_op.h  npu_resource_op.cpp  npu_resource_op.h  npu_shape_depend_on_value_op.cpp  npu_shape_depend_on_value_op.h  npu_static_shape_op.cpp  npu_static_shape_op.h  npu_unsupported_op.cpp  npu_unsupported_op.h
tf_adapter_2.x/npu_device/core/optimizers/: npu_optimizer_manager.h
tf_adapter_2.x/npu_device/kernels/: iterator_h2d.cpp  npu_call.cpp  send_h2d.cpp
tf_adapter_2.x/npu_device/ops/: custom_op.cpp
tf_adapter_2.x/npu_ops/: CMakeLists.txt  npu_fake_kernels_register.cpp
tf_adapter_2.x/tests/st/: CMakeLists.txt  adapter2_aoe_st.py  adapter2_compile_dynamic_mode_st.py  adapter2_jit_compile_st.py  adapter2_options.py  adapter2_shape_generalization_mode_ignore_st.py  adapter2_shape_generalization_mode_st.py  adapter2_st.py
tf_adapter_2.x/tests/ut/: CMakeLists.txt
tf_adapter_2.x/tests/ut/testcases/: test_custom_opp.cpp  test_npu_device.cpp
(+964 files in other folders)
